--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ nav ul li a {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
+  font-weight: bold;
 }
 
 .nav-li:hover {
@@ -67,6 +68,51 @@ nav ul li a {
 }
 .con-logout {
   margin-left: 50px;
+}
+.btn {
+  width: 80px;
+  height: 35px;
+  background: #2f7bee;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+}
+
+.btn span {
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: top 0.5s;
+}
+
+.btn-text-one {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.btn-text-two {
+  position: absolute;
+  width: 100%;
+  top: 150%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.btn:hover .btn-text-one {
+  top: -100%;
+}
+
+.btn:hover .btn-text-two {
+  top: 50%;
 }
 /* .group {
   display: flex;
