--- a/css/style-input.css
+++ b/css/style-input.css
@@ -9,44 +9,38 @@
   background-color: white;
   border-radius: 20px;
   width: 550px;
-  position: relative;
+  position: absolute;
   padding: 30px;
+}
+.container-input .input-data input:focus,
+.container-input .input-data select:focus{
+  outline: none;
+  box-shadow: 0 0 0 4px rgba(76, 189, 234, 0.338);
 }
 .container-input .input-data {
   display: flex;
   padding: 7px 10px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
-.container-input .input-data .radio-button {
-  width: 300px;
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  float: left;
+.container-input .input-data label{
+  margin-bottom: 10px;
 }
 .container-input .input-data #nama,
 #usia,
-#pendidikan,
 #tanggal-lahir,
+#jenis-kelamin,
+#pendidikan,
 #status {
-  width: 300px;
+  width: 100%;
   height: 30px;
   border: none;
   border-radius: 5px;
-  background-color: #f0f0f0;
-  border: 0.5px solid #e6e6e6;
+  background-color: #fff;
+  border: 0.7px solid #b3b2b2;
   font-size: 14px;
   padding-left: 10px;
   padding-right: 10px;
-}
-.container-input .input-data input:focus {
-  outline: none;
-  background-color: #ffeaea;
-}
-.container-input .input-data #perempuan #laki-laki {
-  width: 50%;
-  float: left;
 }
 .container-input form h2 {
   margin: 10px;
@@ -69,7 +63,7 @@
   color: white;
   font-weight: bold;
 }
-.container-input .button #submit{
+.container-input .button #submit {
   border: 2px solid #24b4fb;
   background-color: #24b4fb;
 }
@@ -77,7 +71,7 @@
 .container-input .button #submit:hover {
   background-color: #0071e2;
 }
-.container-input .button #ubah{
+.container-input .button #ubah {
   border: 2px solid #24b4fb;
   background-color: #24b4fb;
 }
@@ -86,9 +80,9 @@
   background-color: #0071e2;
 }
 .container-input .button #batal {
-    border: 2px solid #20e461;
-    background-color: #20e461;
-  }
-  .container-input .button #batal:hover {
-    background-color: #15bd4d;
-  }
+  border: 2px solid #20e461;
+  background-color: #20e461;
+}
+.container-input .button #batal:hover {
+  background-color: #15bd4d;
+}
