--- a/css/style.css
+++ b/css/style.css
@@ -9,25 +9,38 @@
   list-style: none;
 }
 body {
+  margin-top: 90px;
   background-color: #dfdfdf;
   height: auto;
 }
 
+.container{
+  width: 100%;
+  height: 100vh auto;
+}
 /* styling nav bar */
 
-nav {
+.primary-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  transition: background-color 0.5s;
+}
+
+header.active{
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+
+.navbar {
   display: flex;
   background: white;
   height: 80px;
   width: 100%;
   align-items: center;
-}
-.navbar {
-  /* position: fixed; */
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 999;
+  /* border-bottom: 2px solid rgba(255, 255, 255, 0.05); */
+  transition: height 0.25s;
 }
 
 .navbar-scroll {
@@ -47,18 +60,18 @@ nav {
   height: 50px;
   width: auto;
 }
-nav ul {
+.navbar .menu {
   display: flex;
   justify-content: end;
   align-items: center;
   width: 100%;
   margin-right: 100px;
 }
-nav ul li {
+.navbar .menu li {
   display: inline-block;
   margin: 0 5px;
 }
-nav ul li a {
+.navbar .menu li a {
   color: #1e1e1e;
   padding: 7px 13px;
   border-radius: 3px;
@@ -69,14 +82,24 @@ nav ul li a {
   line-height: 17px;
   font-weight: bold;
 }
-
+.navbar ul.menu li a.active,
+.navbar ul.menu li a:hover {
+  background: #d9d9d9;
+  /* border: 1px solid #999; */
+}
+/* .navbar .menu li a.active{
+  background: #d9d9d9;
+} */
 .nav-li:hover {
   color: #828282;
   transition: 0.5s;
 }
-.nav-li.active:hover {
+/* a:hover {
   background: #d9d9d9;
-}
+  color: white;
+} */
+
+
 .con-logout {
   margin-left: 50px;
 }
