--- a/css/style-input.css
+++ b/css/style-input.css
@@ -1,16 +1,22 @@
-.container-input {
+main {
   width: auto;
   height: 100vh;
+  /* position: relative; */
+}
+.container-input {
+  width: auto;
+  height: 70vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  /* border: 1px solid black; */
   
 }
 .container-input form {
   background-color: white;
   border-radius: 20px;
   width: 550px;
-  position: absolute;
+  /* position: absolute; */
   padding: 30px;
   box-shadow:  0 0 5px rgba(0, 0, 0, 0.2);
 }
