--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,9 @@
 }
 body {
   margin-top: 80px;
-  background-color: #dfdfdf;
+  background-color: #F4F4F4;
   height: auto;
-  /* background-image: url(../img/Desktop\ -\ 1.png); */
-  /* background-repeat: no-repeat;
-    background-size: cover; */
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", sans-serif; 
 }
 
 .container {
@@ -209,7 +206,10 @@ footer span {
   /* border: 1px solid black; */
   width: 100% auto;
   padding: 20px 0;
-  background-color: #95bdff;
+  /* background-color: #95bdff; */
+  background-image: url(../img/Asset\ 1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .overview {
   color: #fffafa;
@@ -227,7 +227,7 @@ section .container-ov {
 
 .container-card {
   width: auto;
-  height: 60%;
+  height: 50%;
   display: flex;
   justify-content: space-between;
   margin: 36px;
@@ -241,7 +241,7 @@ section .container-ov {
   /* align-items: center; */
   /* justify-content: center; */
   border-radius: 10px;
-  background-color: #f4efd3;
+  background-color: #f6fcff;
   /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
 }
 
@@ -252,7 +252,7 @@ section .container-ov {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #c2b0c9;
+  background: #93BFCF;
   border-radius: 10px 10px 0 0;
   /* box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); */
 }
@@ -269,7 +269,7 @@ section .container-ov {
 }
 .in-card-1 .circle i {
   font-size: 4em;
-  color: #9656a1;
+  color: #6096B4;
 }
 
 .in-2-card-1 {
@@ -282,7 +282,7 @@ section .container-ov {
   flex-direction: column;
 }
 .in-2-card-1 .ovw-1 {
-  width: 60%;
+  width: 100%;
   height: 70%;
   display: flex;
   flex-direction: column;
@@ -312,22 +312,22 @@ section .container-ov {
 .view-jk .jml {
   font-size: 2em;
   font-weight: bold;
-  color: #9656a1;
+  color: #6096B4;
 }
 .view-jk .jk {
   font-size: 1.3em;
-  color: #c2b0c9;
+  color: #93BFCF;
 }
 .ov-title {
   font-size: 4em;
   font-weight: bold;
-  color: #9656a1;
+  color: #6096B4;
 }
 .ov-nm {
   font-weight: 500;
   font-size: 1.5em;
   line-height: 18px;
-  color: #c2b0c9;
+  color: #93BFCF;
 }
 .bt-card-1 {
   height: 120px;
@@ -342,15 +342,15 @@ section .container-ov {
 .bt-card-1 button {
   padding: 8px 25px;
   background-color: transparent;
-  color: #c2b0c9;
-  border: 2px solid #c2b0c9;
+  color: #93BFCF;
+  border: 2px solid #93BFCF;
   border-radius: 7px;
   cursor: pointer;
   transition: ease-out 0.5s;
 }
 .bt-card-1 button:hover {
-  color: #9656a1;
-  box-shadow: inset 0 -100px 0 0 #c2b0c9;
+  color: #f6fcff;
+  box-shadow: inset 0 -100px 0 0 #93BFCF;
 }
 .bt-card-1 button:active {
   transform: scale(0.9);
@@ -375,7 +375,7 @@ section .container-ov {
   height: 48%;
   margin-bottom: 15px;
   border-radius: 10px;
-  background-color: #f4efd3;
+  background-color: #f6fcff;
   /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
 }
 .card-2 .tag-pg {
@@ -386,11 +386,11 @@ section .container-ov {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #c2b0c9;
+  background-color: #93BFCF;
 }
 .tag-pg i {
   font-size: 2.5em;
-  color: #9656a1;
+  color: #6096B4;
 }
 .card-2 .tag-num {
   display: flex;
@@ -402,12 +402,12 @@ section .container-ov {
   align-items: center;
 }
 .ov-title-1 {
-  color: #9656a1;
+  color: #6096B4;
   font-size: 3.2em;
   font-weight: bold;
 }
 .ov-nm-1 {
-  color: #c2b0c9;
+  color: #93BFCF;
   font-size: 1.2em;
 }
 /* ====== CARD DUA ====== */
@@ -422,7 +422,7 @@ section .container-ov {
   height: 48%;
   margin-top: 15px;
   border-radius: 10px;
-  background-color: #f4efd3;
+  background-color: #f6fcff;
   /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
 }
 .card-3 .tag-pg-2 {
@@ -433,11 +433,11 @@ section .container-ov {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #c2b0c9;
+  background-color: #93BFCF;
 }
 .tag-pg-2 i {
   font-size: 2.5em;
-  color: #9656a1;
+  color: #6096B4;
 }
 .card-3 .tag-num-2 {
   display: flex;
@@ -449,12 +449,12 @@ section .container-ov {
   align-items: center;
 }
 .ov-title-2 {
-  color: #9656a1;
+  color: #6096B4;
   font-size: 3.2em;
   font-weight: bold;
 }
 .ov-nm-2 {
-  color: #c2b0c9;
+  color: #93BFCF;
   font-size: 1.2em;
 }
 /* ====== CARD TIGA ====== */
